--- a/client/src/app/members/member-list/member-list.component.html
+++ b/client/src/app/members/member-list/member-list.component.html
@@ -1,6 +1,6 @@
 <ng-container >
 <div class="row">
-    <div class="col-2" *ngFor="let member of members">
+    <div class="col-2" *ngFor="let member of members$ | async">
         <app-member-card [member]="member"></app-member-card>
     </div>
 </div>
