--- a/client/src/app/members/member-editor/member-editor.component.html
+++ b/client/src/app/members/member-editor/member-editor.component.html
@@ -54,7 +54,7 @@
             </tab>
           
             <tab heading='Edit Photos '>
-               <p>Edit Photo here</p>             
+               <app-photo-editor [member] = "member"> </app-photo-editor>            
             </tab>
            
         </tabset>
