--- a/client/src/app/nav/nav.component.css
+++ b/client/src/app/nav/nav.component.css
@@ -1,3 +1,9 @@
 .dropdown-menu .dropdown-item{
     cursor: pointer;
 }
+img{
+    max-height: 50px;
+    border: 2px solid white;
+    display: inline;
+    margin-right: 2px;
+}
