--- a/client/src/app/members/member-card/member-card.component.html
+++ b/client/src/app/members/member-card/member-card.component.html
@@ -16,7 +16,7 @@
     <div class="card-body p-1">
         <h6 class="card-text text-muted text-center">
             <i class="fa fa-user mr-2"></i>
-            {{member.knowAs}}
+            {{member.knowAs}}, {{member.age}}
         </h6>
         <p class="card-text text-muted text-center">{{member.city}}</p>
     </div>
